Tue Aug 18 17:54:40 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c (gtk_rc_parse_file): use g_get_current_dir() instead of
	getcwd().

 	* gdk/gdkprivate.h:
	* gdk/gdkglobals.c:
 	* gdk/gdkwindow.c:
	* gdk/gdk.c:
	* gtk/gtkwindow.c: 
	* gtk/gtkitemfactory.c: 
	dropped gdk_progname, use g_get_prgname()/g_set_prgname() instead.

	* gtk/gtkselection.c:
	* gtk/gtkpreview.c:
	* gtk/gtkobject.c: 
	* gtk/gtkmain.c: 
	* gtk/gtktypeutils.c: indentation fixes due to g_message() use.

	* gdk/gdkrgb.c: exchanged occourances of g_print with g_message.

Tue Aug 18 17:22:22 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_switch_focus_tab): 
	* gtk/gtknotebook.c (gtk_notebook_update_labels): fix for sigsegv
	in case of show_tabs == NULL

Tue Aug 18 03:54:43 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c	(gtk_init): restricted the --g*fatal-* arguments
	to --g-fatal-warnings again. this option now causes log levels of
	WARNING and CRITICAL to abort().

	* gdk/gdk.c: 
	* gdk/gdkdnd.c: 
	* gdk/gdkcc.c: 
	* gdk/gdkfont.c: 
	* gdk/gdkwindow.c:
	* gdk/gdkvisual.c:
	* gtk/gtkwidget.c:
	* gtk/gtktypeutils.c:
	* gtk/gtktree.c:
	* gtk/gtkfontsel.c:
	* gtk/gtkmain.c:
	* gtk/gtkobject.c:
	* gtk/gtkpreview.c:
	* gtk/gtkselection.c:
	* gtk/gtktext.c:
	* gtk/gtktree.c:
	* gtk/gtktreeitem.c:
	did a global search&replace to substitute g_print() calls with
 	g_message(). libraries shouldn't use printf(), g_print() or
	g_printerr() at all.
	a bunch of the replacements should probably be wrapped into the
	G{D|T}K_NOTE() macros, so they are special cased for debugging
	purposes in a sane way, avoiding all the nasty #ifdef DEBUG_MY_TEDDY
	things.

	* gdk/gdkdnd.c: added copyright notice.

Mon Aug 17 17:28:00  Raph Levien  <raph@gtk.org>

	* gdk/gdkrgb.c: Further speedups of the 565_d case. It's
	impressively fast now - about 4.65 Mpix/s on an IBM TP 600
	running a PII 233. It's synced with the 0.0.5 release of
	GdkRgb.

Tue Aug 18 00:29:13 1998  Lars Hamann  <lars@gtk.org>
